--- a/styles.css
+++ b/styles.css
@@ -28,11 +28,11 @@ body{
 
 .input-display{
     width: 100%;
-    height: 95px;
+    height: 100px;
     max-height: fit-content;
     background-color: rgb(163, 163, 163);
     border-radius: 10px;
-    padding: .5rem;
+    padding: .75rem;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -100,6 +100,9 @@ body{
     background-color: rgba(199, 106, 0, 0.548);
     transition: 200ms ease;
 }
+.special-btn:active{
+    background-color: aliceblue;
+}
 
 .regular-btn{
     background-color: rgb(34, 34, 34);
@@ -108,7 +111,12 @@ body{
     background-color: rgba(34, 34, 34, 0.534);
     transition: 10ms ease;
 }
-
-.animate{
+.regular-btn:active{
     background-color: aliceblue;
+}
+
+
+
+.hidden{
+    display: none;
 }
