--- a/styles.css
+++ b/styles.css
@@ -14,21 +14,24 @@ body{
 }
 
 .calculator{
-    background-color: rgb(1, 3, 20);
+    background-color: rgb(19, 19, 19);
+    box-shadow: 3px 3px 15px black;
+    border: 5px solid black;
     color: aliceblue;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 1.5rem;
-    height: auto;
     border-radius: 10px;
-    width: 340px;
+    width: 360px;    
+    height: auto;
 }
 
 .input-display{
+    border: 2px solid black;
     width: 100%;
-    height: 100px;
+    height: 150px;
     max-height: fit-content;
     background-color: rgb(163, 163, 163);
     border-radius: 10px;
@@ -39,24 +42,29 @@ body{
 }
 
 #display, #display-history{
+    font-family: 'Orbitron', sans-serif;
+    font-style: normal;
+    font-weight: 900;
     max-width: 267px;
     text-align: end;
     resize: none;
-    background-color: transparent;
     border: none;
-    font-size: 2.5rem;
-    font-weight: 400;
+    font-size: 2rem;
     color: black;
-    overflow-x: hidden, scroll;
+    overflow-x: scroll, hidden;
     overflow-y: hidden; /* Removes vertical scroll */
     text-overflow: clip;
+    height: 50px;
+}
+
+#display{
+    padding-bottom: 55px;
 }
 
 #display-history {
     font-size: 1.5rem;
-    height: 1.75rem;
-    margin-bottom: .1rem;
     color: rgba(0, 0, 0, 0.651);
+    height: 50px;
 }
 
 .input-pad{
@@ -87,6 +95,8 @@ body{
     padding: .9rem .7rem;
     color: aliceblue;
     box-shadow: 1px 1px 4px black;
+    text-shadow: 2px 2px 2px black;
+    border: 1px solid black;
 }
 
 .span{
@@ -109,14 +119,10 @@ body{
 }
 .regular-btn:hover{
     background-color: rgba(34, 34, 34, 0.534);
+    text-shadow: 1px 1px 2px rgb(24, 24, 24);
     transition: 10ms ease;
+    
 }
 .regular-btn:active{
     background-color: aliceblue;
-}
-
-
-
-.hidden{
-    display: none;
 }
